test/src/e2e_vm_tests/test_programs/should_fail/language/references/references_to_mutable_values/src/lib.sw
library;

pub const LIB_X: u64 = 123;